--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "apisauce": "^2.1.5",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
