--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "apisauce": "^2.1.5",
+    "await-timeout": "^1.1.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
