--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "apisauce": "^2.1.5",
     "await-timeout": "^1.1.1",
+    "dayjs": "^1.11.0",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.10",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
